cabal-version:      2.4
name:               hasklox
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Interpreter for Lox implemented in Haskell, following https://craftinginterpreters.com.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             justynoh
maintainer:         justynoh@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hasklox
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
